# Intelligent_Robotics

./: readme.md  src_structure.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bcr_bot/share/ament_index/resource_index/parent_prefix_path/: bcr_bot
install/bcr_bot/share/bcr_bot/: package.sh
install/bcr_bot/share/bcr_bot/config/: bcr_map.pgm
install/bcr_bot/share/bcr_bot/launch/: gazebo.launch.py
install/bcr_bot/share/bcr_bot/urdf/: bcr_bot.xacro
install/bcr_bot/share/bcr_bot/worlds/: Large_warehouse.world  large_warehouse2.world
install/my_mcl_pkg/lib/my_mcl_pkg/: gt_tf  safe_stop  safe_stop_cmd  test_map  test_mcl  test_odom  test_scan
install/my_mcl_pkg/share/my_mcl_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_mcl_pkg/share/my_mcl_pkg/config/: map_server.yaml  nav2_params.yaml
install/my_mcl_pkg/share/my_mcl_pkg/launch/: my_map_server.launch.py  nav2_map.launch.py  safe_stop_cmd.launch.py  safe_stop_cmdvel.launch.py  test_map.launch.py  test_odom.launch.py  test_scan.launch.py
log/: latest_build  latest_list
src/bcr_bot/launch/: nav2.launch.py
src/my_mcl_pkg/: setup.cfg  setup.py
src/my_mcl_pkg/config/: map_server.yaml
src/my_mcl_pkg/launch/: mcl_node.launch.py  safe_stop.launch.py  safe_stop_cmd.launch.py  test_map.launch.py  test_odom.launch.py
src/my_mcl_pkg/map/: bcr_map.yaml
src/my_mcl_pkg/my_mcl_pkg/: safe_stop_cmd.py  test_mcl.py  test_odom.py
src/my_mcl_pkg/rviz/: final_rviz.rviz
