<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_mcl_pkg</name>
  <version>0.0.0</version>
  <description>A Monte Carlo Localization package for ROS 2</description>
  <maintainer email="q2523062390@126.com">chjm</maintainer>
  <license>BSD</license> <!-- or specify your license here -->

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend> <!-- if you manipulate geometry messages with tf2 -->

  <!-- Python dependencies -->
  <exec_depend>python3-transforms3d</exec_depend> <!-- For handling transformations -->
  <exec_depend>python3-numpy</exec_depend> <!-- 确保 numpy 可用 -->
  
  <!-- Additional dependencies for testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
